Change log for zeit.web
=======================

2.13.4 (unreleased)
-------------------

- MAINT: Fix adcontroller handle in ZMO galleries

- ZON-2292: Add lazyloading for centerpages


2.13.3 (2015-10-14)
-------------------

- MAINT: Exclude ZMO from article lineage query

- MAINT: adjust adBlocker Tracking to GTM dataLayer conventions


2.13.2 (2015-10-14)
-------------------

- MAINT: Bring back timing metric for all content types combined


2.13.1 (2015-10-13)
-------------------

- MAINT: Normalize hostnames in metric names


2.13 (2015-10-13)
-----------------

- HOTFIX: Don't include view_name in the request timing metric names, since
  that caused an explosion of metric names.

- ZON-2246: Chronologische Artikel-Navigation

- MAINT: Revert "ZON-2301: fix/adjust date_last_modified for HP"
  (This is fixed in vivi now)


2.12 (2015-10-09)
-----------------

- ZON-2304: More metrics
  * Add hostname and content-type+view-name to request timing metric names
  * Add timing metrics for our external HTTP requests
  * Add timing metrics for solr
  * Add timing metrics for memcache

- FIX: Be more defensive in several places:
  * unresolveable entries and their images in feeds
  * missing cid infos in community response


2.11 (2015-10-07)
-----------------

- ZON-2286: Add back to home button to articles

- ZON-2242: Change fonts URL to something like ``/.../latest/fonts`` instead of
  ``/.../2.9/fonts`` for better client cacheability

- ZON-2138: Change servicebox link headhunter (main part was mercurial commit)

- ZON-2301: fix/adjust date_last_modified for HP

- ZON-1984: Storystream follow-up/cleanup

- FIX: Be more defensive in several places (resolving uniqueIds, empty
  properties etc.)


2.10.1 (2015-10-02)
-----------------

- HOTFIX: Use image_host for newsfeed image URLs


2.10 (2015-10-02)
-----------------

- ZON-1936: Change bottom separator color in Spektrum parquet area

- HOTFIX: Repair old IE css reference
